--- a/VsusP.Rcheck/00_pkg_src/VsusP/inst/doc/VsusPVignette.Rmd
+++ b/VsusP.Rcheck/00_pkg_src/VsusP/inst/doc/VsusPVignette.Rmd
@@ -100,6 +100,7 @@ The S2M method is a refined approach that aims to minimize masking errors, which
 **Choosing Tuning Parameter \( b \)**:
 The tuning parameter \( b \) is chosen to balance the masking and swamping errors. A visual inspection of the plot of \( b_i \) vs. the number of significant variables helps in identifying the optimal value of \( b \).
 
+Note: The parameter values presented in the examples are for demo purpose only and choose the parameters as per the problem you are dealing with.
 
 ## Example
 
@@ -114,7 +115,7 @@ library(MASS)
 
 
 # Set seed for reproducibility
-set.seed(20221208)
+set.seed(123)
 
 # Simulate data
 sim.XY <- function(n, p, beta) {
@@ -123,8 +124,8 @@ sim.XY <- function(n, p, beta) {
   return(list(X = X, Y = Y, beta = beta))
 }
 
-n <- 100
-p <- 20
+n <- 10
+p <- 5
 beta <- exp(rnorm(p))
 data <- sim.XY(n, p, beta)
 ```
@@ -136,7 +137,7 @@ data <- sim.XY(n, p, beta)
 ```{r s2m-apply}
 
 b.i <- seq(0, 1, by = 0.05)
-S2M <- VsusP::Sequential2Means(X = data$X, Y = as.vector(data$Y), b.i = b.i, prior = "horseshoe+", n.samples = 5000, burnin = 2000)
+S2M <- VsusP::Sequential2Means(X = data$X, Y = as.vector(data$Y), b.i = b.i, prior = "horseshoe+", n.samples = 300, burnin = 100)
 Beta <- S2M$Beta
 H.b.i <- S2M$H.b.i
 ```
@@ -157,7 +158,7 @@ cat("Optimal H.b.i: \n", optimal_Hbi, "\n")
 ```
 
 ```{r s2m-results important Variables}
-H <- 13
+H <- optimal_Hbi
 # Variable selection
 impVariablesGLM <- VsusP::S2MVarSelection(Beta, H)
 impVariablesGLM
@@ -193,13 +194,13 @@ and type II errors.
 **Process:** Iteratively refines variable classification into signal or noise based on the Bayesian posterior distributions.
 
 ```{r sequential2means-example}
-set.seed(20221208)
-n <- 100
-p <- 20
+set.seed(123)
+n <- 10
+p <- 5
 X <- matrix(rnorm(n * p), n, p)
 Y <- X %*% exp(rnorm(p)) + rnorm(n)
 b.i <- seq(0, 1, length.out = 20)
-result <- VsusP::Sequential2Means(X, as.vector(Y), b.i, prior = "horseshoe+", n.samples = 5000, burnin = 2000)
+result <- VsusP::Sequential2Means(X, as.vector(Y), b.i, prior = "horseshoe+", n.samples = 300, burnin = 100)
 
 cat("Beta: \n")
 print(result$Beta[1:5, ])
@@ -251,7 +252,8 @@ It leverages detailed clustering information, specifically the median absolute v
 **Process:** Selects variables whose coefficients show consistent importance across samples, minimizing error rates.
 
 ```{r s2mvar-selection-example}
-H <- 17 
+optimal_Hbi <- min(result$H.b.i)
+H <- optimal_Hbi 
 significantVariables <- VsusP::S2MVarSelection(result$Beta, H)
 cat("Significant Variables: \n")
 print(significantVariables)
@@ -309,9 +311,9 @@ library(VsusP)
 
 set.seed(12345) 
 
-n <- 50
-p <- 300
-r <- 10
+n <- 20
+p <- 5
+r <- 3
 rho <- 0.95
 
 Sigma <- diag(1, p)
@@ -328,13 +330,13 @@ for (b in 0:(num_blocks - 1)) {
 Sigma <- Sigma + diag(0.001, p)  # Ensure positive definiteness
 
 X <- mvrnorm(n, mu = rep(0, p), Sigma = Sigma)
-beta_true <- c(6, rep(3, 4), rep(1, 5), rep(0, p - 10))
+beta_true <- c(6, rep(3, 2), 1, 0)
 Y <- as.vector(X %*% beta_true + rnorm(n))
 
 var_y <- var(Y)
 b_i_range <- seq(0.5 * var_y, 10 * var_y, length.out = 20)  # Check the scale of var(Y)
 
-results <- Sequential2Means(X = X, Y = Y, b.i = b_i_range, prior = "horseshoe+", n.samples = 5000, burnin = 2000)
+results <- Sequential2Means(X = X, Y = Y, b.i = b_i_range, prior = "horseshoe+", n.samples = 300, burnin = 100)
 
 plot(b_i_range, results$H.b.i, type = 'b', xlab = "Tuning parameter b.i", ylab = "Estimated number of signals (H.b.i)",
      main = "Plot of b.i vs H.b.i for Simulation 2")
